--- a/css/filtrify.css
+++ b/css/filtrify.css
@@ -27,9 +27,11 @@ ul.ft-menu * {
 ul.ft-menu {
 	list-style: none;
   height: 100px;
-    font-size: 30px;
-    margin-top: 50px;
+    font-size: 24px;
+    margin-top: 40px;
     text-transform: capitalize;
+    padding-bottom:10px;
+    display: table;
 }
 
 ul.ft-menu > li.ft-field {
@@ -40,7 +42,7 @@ ul.ft-menu > li.ft-field {
 	background: none !important;
 	position: relative !important;
   margin-bottom: 10px;
-    border: 3px solid #333;
+    border: 2px solid #333;
     border-radius: 10px;
 }
 
