--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ margin-top: 10px !important;
     -moz-border-radius: 0.6em;
     -o-border-radius: 0.6em;
     padding-bottom: 17px;
-      
+
 }
 .product{
   display: block;
@@ -401,6 +401,7 @@ a.ht-btn, button.ht-btn, input[type=submit] {
     -ms-transition: all .2s ease;
     -o-transition: all .2s ease;
     transition: all .2s ease;
+    background-color: #e32024;
   }
     a.ht-btn-default, button.ht-btn-default {
     background: #d11717;
@@ -470,6 +471,7 @@ hr{
 .search-content{
   font-size:18px;
   margin-top:12px;
+  padding-bottom: 12px;
 }
 
 
@@ -502,4 +504,9 @@ hr{
   background-color: #fff !important;
   border: 1px solid #000 !important;
   color: #000 !important;
+}
+
+.reset {
+  margin-top:20px;
+  display:none;
 }
